[MODUSERSKC-115]. Make adjustment to rely on the real username for creating Identity Provider Link